news-preview: summary
